引入静态资源

--- a/end/demo1/bookdemo/template/index.html
+++ b/end/demo1/bookdemo/template/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
-<body>
+<body class="index">
     <h1>这里是首页</h1>
+    <img src="" alt="">
     <ul>
         {% for book in books %}
         <a href="/booktest/detail/{{book.id}}/"><li>{{book.id}}--{{book.title}}--{{book.price}}--{{book.pub_date}}</li></a>
