--- a/end/demo1/bookdemo/template/detail.html
+++ b/end/demo1/bookdemo/template/detail.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>详情页</title>
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
-<body>
+<body class="detail">
     <h1>这里是详情页</h1>
-    <div>
+    <div >
         <h2>书名:{{book.title}}</h2>
 
 
