--- a/end/demo1/bookdemo/template/detail.html
+++ b/end/demo1/bookdemo/template/detail.html
@@ -13,12 +13,17 @@
 
         <ul>
             {% for hero in book.hero_set.all %}
-                <li>{{hero.id}}--{{hero.name}}--{{hero.gender}}--{{hero.content}}</li>
+                <li>{{hero.id}}--{{hero.name}}--{{hero.gender}}--{{hero.content}} <a href="{% url 'booktest:edithero' hero.id %}">编辑</a> <a href="{% url 'booktest:deletehero' hero.id  %}">删除</a> </li>
             {% endfor %}
+            <a href="{% url 'booktest:addhero' book.id %}">添加英雄</a>
+
         </ul>
     </div>
 
-    <a href="/booktest/index/">返回列表页</a>
+    {#<a href="/">返回列表页</a> #}
+    <a href="{% url 'booktest:index' %}">返回列表页</a>
+
+
 
 </body>
 </html>
