投票小程序

--- a/end/demo1/bookdemo/polls/templates/polls/result.html
+++ b/end/demo1/bookdemo/polls/templates/polls/result.html
@@ -17,7 +17,7 @@
         </li>
         {% endfor %}
     </ul>
-    <a href="{% url 'polls:detail' article.id %}">返回</a>
+    <a href="{% url 'polls:index'%}">返回</a>
     </div>
 </body>
 </html>
